# UniClawBench

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: api.example.env  base_skills.json  codex.example.toml  models.example.json  orchestra.example.yaml  privacy.example.env
docker/: codex.Dockerfile  configure-base-skills.py  edict_orchestrator.py  install-codex-runtime.sh  install-common-runtime.sh  install-duckduckgo-search.sh  nanobot.Dockerfile  openclaw-edict.Dockerfile  openclaw.Dockerfile  runtime-base.Dockerfile  start-desktop.sh
docs/: 01_runtime_flow.md  02_executor.md  03_user.md  04_supervisor.md  05_prompts_and_artifact_injection.md  CREDENTIALS.md  PROMPTS.md  REPRODUCIBILITY.md  STATUS_MODEL.md  TASK_SCHEMA.md  deprecations.md
lib/: __init__.py  config_stack.py  constants.py  defaults.py  i18n.py  privacy.py  runtime_metrics.py  status.py  task.py
lib/proxy/: __init__.py  adapter.py  adapter_server.py  core.py  transform.py  tunnel.py  usage.py
lib/runner/: __init__.py  agent_monitor.py  agents.py  artifacts.py  completion_strategies.py  container_lifecycle.py  docker.py  edict.py  errors.py  evaluation.py  key_pool.py  media.py  openclaw.py  orchestration.py  populator_lock.py  quality_artifacts.py  sessions.py  task_config.py  transcripts.py  usage_ledger.py
lib/supervision/: __init__.py  answer_supervisor.py  codex.py  common.py  content.py  feedback_rewriter.py  orchestrator.py  transcripts.py  user_simulator.py  workspace.py
lib/templates/: __init__.py  answer_supervisor.py  executor_runtime.py  session_wrapper.py  supervisor_default.py  user_simulator.py
lib/util/: __init__.py  dedup.py  model_naming.py
scripts/: batch_eval.py  build_image.sh  fetch_edict.sh  run_eval.py  run_webui.py  upload_static_assets_s3.py
scripts/dev/: check_release_assets.py  refresh_tokens.py  release_check.py
scripts/orchestra/: README.md  __init__.py  build_images.sh  config.py  dispatch.py  ensure_adapter.py  (+11 more)
tests/: conftest.py
webui/: aggregate.py  export_static.py  server.py
(+1675 files in other folders)
